<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Learning Assistant</string>
    <string name="welcome">Welcome,</string>
    <string name="student">Student!</string>
    <string name="lets_start_learning">Let\'s Start Learning!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="lets_get_you_setup">Let\'s Get You</string>
    <string name="setup">Setup!</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_new_account">Create New Account</string>
    <string name="your_interests">Your Interests</string>
    <string name="you_may_select">You may select up to 10 topics</string>
    <string name="next">Next</string>
    <string name="hello">Hello,</string>
    <string name="your_name">Your Name</string>
    <string name="generated_task">AI Generated Task</string>
    <string name="task_description">This is an AI-generated task, which could help you improve your interested topics. Click me to use it!</string>
    <string name="question">Question</string>
    <string name="submit">Submit</string>
    <string name="your_results">Your Results</string>
    <string name="continue_text">Continue</string>
    <string name="algorithms">Algorithms</string>
    <string name="data_structures">Data Structures</string>
    <string name="web_development">Web Development</string>
    <string name="testing">Testing</string>
    <string name="generated_by_ai">Generated by AI</string>
    <string name="you_have_1_task_due">You have 1 task due</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="response_from_model">Response from model</string>
    <string name="app_title">Personalized Learning Experience App by Hongming LIU</string>
</resources>